<resources>
    <string name="app_name">MeetApp</string>
    <string name="text_name">Nome completo</string>
    <string name="text_email">Digite seu e-mail</string>
    <string name="text_password">Sua senha secreta</string>
    <string name="current_password">Senha atual</string>
    <string name="new_password">Nova senha</string>
    <string name="confirm_password">Confirmação de senha</string>
    <string name="create_account">Criar conta</string>
    <string name="create_new_account">Criar conta grátis</string>
    <string name="login">Entrar</string>
    <string name="already_login">Já tenho login</string>
    <string name="save_profile">Salvar perfil</string>
    <string name="save_meetup">Salvar meetup</string>
    <string name="exit_app">Sair do Meetapp</string>
    <string name="text_title">Título</string>
    <string name="text_description">Descrição</string>
    <string name="text_location">Localização</string>
    <string name="text_date">Data/Hora</string>
    <string name="text_meetup_registration">Realizar inscrição</string>
    <string name="text_cancel_meetup_registration">Cancelar inscrição</string>
    <string name="select_date">Selecione uma data</string>
    <string name="change_image">Alterar imagem</string>
    <string name="select_image">selecionar imagem</string>
    <string name="no_subscriptions">Você não possui inscrições </string>
</resources>
