<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context=".view.fragment.InscriptionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/saveProfileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_button"
            android:text="@string/save_profile"
            android:textColor="#FFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/exitAppProfile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEditTextConfirmPass" />

        <Button
            android:id="@+id/exitAppProfile"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_button_exit"
            android:text="@string/exit_app"
            android:textColor="#FFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/saveProfileButton" />


        <EditText
            android:id="@+id/profileEditTextCurrentPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#FFF"
            android:textColorHint="#99FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/profileEditTextNewPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/profileEditTextNewPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#FFF"
            android:textColorHint="#99FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/profileEditTextConfirmPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEditTextCurrentPass"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/profileEditTextConfirmPass"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#FFF"
            android:textColorHint="#99FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/saveProfileButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEditTextNewPass"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/profileEditTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/text_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="#FFF"
            android:textColorHint="#99FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/profileEditTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/profileEditTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#FFF"
            android:textColorHint="#99FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEditTextName"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="24dp"
            android:background="#4AAAAAAA"
            app:layout_constraintBottom_toTopOf="@+id/profileEditTextCurrentPass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileEditTextEmail"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/profileProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/saveProfileButton"
            app:layout_constraintEnd_toEndOf="@+id/saveProfileButton"
            app:layout_constraintStart_toStartOf="@+id/saveProfileButton"
            app:layout_constraintTop_toTopOf="@+id/saveProfileButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

