<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context=".view.fragment.InscriptionsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/selectImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/button_bg_dashed_border"
            android:text="selecionar imagem"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/newMeetupEditTextLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <Button
            android:id="@+id/saveMeetupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_button"
            android:text="@string/save_meetup"
            android:textColor="#FFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newMeetupTextViewDate"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/newMeetupTextViewDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/text_date"
            android:inputType="date"
            android:padding="15dp"
            android:textColor="#FFF"
            android:textColorHint="#99FFFFFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/saveMeetupButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newMeetupEditTextLocation"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/newMeetupEditTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/text_title"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="#FFF"
            android:textColorHint="#99FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/newMeetupEditTextDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/newMeetupEditTextDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/text_description"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="#FFF"
            android:textColorHint="#99FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newMeetupEditTextTitle"
            tools:ignore="MissingConstraints" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="#4AAAAAAA"
            app:layout_constraintBottom_toTopOf="@+id/selectImageButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/newMeetupEditTextDescription"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/newMeetupEditTextLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/background_edittext"
            android:ems="10"
            android:hint="@string/text_location"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="#FFF"
            android:textColorHint="#99FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/newMeetupTextViewDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectImageButton"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

